<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>java-conditionals</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>java-conditionals</name>

   <parent>
      <groupId>cn.tuyucheng.taketoday.java-core-modules</groupId>
      <artifactId>java-core-modules</artifactId>
      <version>1.0.0</version>
   </parent>

   <dependencies>
      <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>1.18.24</version>
         <scope>provided</scope>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven-compiler-plugin.version}</version>
            <configuration>
               <compilerArgs>--enable-preview</compilerArgs>
               <source>${maven.compiler.source.version}</source>
               <target>${maven.compiler.target.version}</target>
               <release>23</release>
               <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${maven-surefire-plugin.version}</version>
            <configuration>
               <argLine>--enable-preview</argLine>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <properties>
      <maven.compiler.source.version>23</maven.compiler.source.version>
      <maven.compiler.target.version>23</maven.compiler.target.version>
   </properties>
</project>